# python-project-50

./: .codeclimate.yml  .coveragerc  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml
gendiff/: for_json.py  for_yaml.py  gendiff.py  gendiff_recurs.py  gendiff_recurs_yaml.py  gendiff_yaml.py  plain.py  recrus_for_yaml.py  recurs_for_json.py  test.py
gendiff/fixtures/: right_ans1.py
gendiff/scripts/: gendiff.py  gendiff_script.py
gendiff/tests/: rec_test.py  test.py  tests.py
gendiff/tests/fixtures/: right_ans.py  right_ans_plain.py  right_ans_recurs.py
