[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["LAMENTIN28 <perpendomobile@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
flask = "^3.0.3"
pyyaml = "^6.0.1"
coverage = "^7.6.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
gendiff_yaml = "gendiff.scripts.gendiff_yaml:main"
